--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -1,1 +1,38 @@
-tanvir
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+</head>
+<body>
+    <section class="container d-flex flex-column align-items-center justify-content-center">
+        <h1 >Log in</h1>
+        <div class="login-form">
+            <form action="" >
+                <div class="form-group d-flex flex-column align-items-center">
+                    <label for="">User  Type</label>
+                    <select name="" id="" class="d-block w-100">
+                        <option value="">Student</option>
+                        <option value="">Teacher</option>
+                    </select>
+                </div>
+                <div class="form-group d-flex flex-column align-items-center">
+                    <label for="">Iub Mail</label>
+                    <input type="email" name="" id="" class="d-block w-100">
+                </div>
+                <div class="form-group d-flex flex-column align-items-center">
+                    <label for="">Password</label>
+                    <input type="password" name="" id="" class="d-block w-100">
+                </div>
+                <button type="submit" class="btn btn-block mt-3"><a href="http://127.0.0.1:8000/admin/">Enter</a></button>
+            </form>
+
+        </div>
+    </section>
+</body>
+</html>
